flickering bug gefixt

--- a/bin/css/preload.css
+++ b/bin/css/preload.css
@@ -7,6 +7,11 @@ img {
     max-width: 100%;
 }
 
+body {
+    opacity: 0;
+}
+
+
 /*
 #nav a span,
 #header h1 a {
